# dsa-agent

./: .env.example  README.md  pyproject.toml  requirements.txt
docs/: EVENT_HANDLING.md
dsa_agent/: config.py  logger.py  monitor.py  playground.py
dsa_agent/agent/: __init__.py  agent.py  dsa_agent.py  mcp_url.py  memory.py  prompt.py
dsa_agent/api/: main.py  settings.py
dsa_agent/api/routes/: agent.py  v1_router.py
dsa_agent/db/: get_db.py
streamlit_ui/: README.md  app.py  app_original_backup.py
streamlit_ui/.streamlit/: config.toml
streamlit_ui/components/: chat_display.py  sidebar.py
streamlit_ui/core/: app.py
streamlit_ui/handlers/: response_streamer.py
streamlit_ui/utils/: config.py  session.py
utils/: gen_userid.py
